--- a/pilltest/index.html
+++ b/pilltest/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Asset Pills with Icons — Test</title>
+<title>Asset Pills with TOML Icons — Test</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- Stellar SDK (UMD v14) -->
+<script src="https://cdn.jsdelivr.net/npm/@stellar/stellar-sdk@14.3.0/dist/stellar-sdk.min.js" crossorigin="anonymous"></script>
 <style>
-  :root{--bg:#0b0f12;--panel:#12181d;--ink:#e8f0f6;--muted:#8aa0ac;--border:#1c242c;--pill:#0f1620;--accent:#6c4ddc;}
+  :root{--bg:#0b0f12;--panel:#12181d;--ink:#e8f0f6;--muted:#8aa0ac;--border:#1c242c;--pill:#0f1620;}
   *{box-sizing:border-box}
   html,body{margin:0;background:var(--bg);color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
   .wrap{max-width:720px;margin:28px auto;padding:0 16px}
@@ -29,7 +31,7 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>Asset pills with logos (demo)</h1>
+    <h1>Asset pills with icons from SEP-1 (stellar.toml)</h1>
 
     <div class="row">
       <div style="flex:1;min-width:260px">
@@ -71,26 +73,32 @@
     </div>
 
     <div class="row" style="margin-top:14px">
-      <button class="btn" id="reload">Reload Icons</button>
+      <button class="btn" id="reload">Clear Cache & Reload</button>
     </div>
   </div>
 </div>
 
 <script>
-  // Known issuers
-  const AQUA_ISSUER    = "GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAV7Y4M67AQUA";
+  const SDK = window.StellarSdk;
+  const HORIZON = "https://horizon.stellar.org";
+
+  // AQUAm25 issuer (so we can demo the "To" pill)
   const AQUAM25_ISSUER = "GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC";
 
-  // Crisp inline SVG for XLM
-  const XLM_SVG = `
-  <svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg">
-    <circle cx="128" cy="128" r="128" fill="#1b2a42"/>
-    <path fill="#fff" d="M186.7 86.2c-28.7-28.8-75.2-28.9-104-.2-12.6 12.5-20 28.2-21.6 45l26.2-11
+  // Pretty XLM SVG (data URL)
+  const XLM_SVG = 'data:image/svg+xml;utf8,' + encodeURIComponent(`
+    <svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="128" cy="128" r="128" fill="#1b2a42"/>
+      <path fill="#fff" d="M186.7 86.2c-28.7-28.8-75.2-28.9-104-.2-12.6 12.5-20 28.2-21.6 45l26.2-11
       c2.9-9.5 8.2-18.5 15.8-26 21.9-21.7 57.4-21.6 79.2.2 21.8 21.8 22 57.3.3 79.2-18.4 18.6-47.1 21.2-68.5 7.9l-12.4 20.9
       c30.1 16.7 68.7 12 93.7-13.2 28.9-29 28.8-75.8-1.1-103.8zM61 139.6l-18.5 7.8c-2.7 1.2-3.9 4.3-2.7 7l4.1 9.6c1.2 2.7 4.3 3.9 7 2.7l18.5-7.8 7.9 18.5c1.2 2.7 4.3 3.9 7 2.7l9.6-4.1c2.7-1.2 3.9-4.3 2.7-7l-7.9-18.5 72.7-30.8c2.7-1.2 3.9-4.3 2.7-7l-4.1-9.6c-1.2-2.7-4.3-3.9-7-2.7L84 138.6l-7.9-18.5c-1.2-2.7-4.3-3.9-7-2.7l-9.6 4.1c-2.7 1.2-3.9 4.3-2.7 7L61 139.6z"/>
-  </svg>`.trim();
+    </svg>
+  `);
 
-  const ICON_CACHE = new Map();
+  // In-memory cache
+  const ICON_CACHE = new Map();  // key: "CODE:ISSUER|null" -> url|string
+  const DOMAIN_CACHE = new Map(); // issuer -> home_domain
+  const TOML_CACHE = new Map();   // domain -> parsed TOML
 
   function monogram(text) {
     const c = document.createElement('canvas');
@@ -105,37 +113,56 @@
     return c.toDataURL('image/png');
   }
 
-  function tryLoad(url, timeoutMs=6000){
-    return new Promise(resolve=>{
-      const img = new Image();
-      let done=false; const t=setTimeout(()=>{if(!done){done=true;resolve(null)}},timeoutMs);
-      img.onload = ()=>{ if(!done){done=true;clearTimeout(t);resolve(url)} };
-      img.onerror= ()=>{ if(!done){done=true;clearTimeout(t);resolve(null)} };
-      img.crossOrigin='anonymous';
-      img.src=url;
-    });
+  async function getHomeDomain(issuer){
+    if (DOMAIN_CACHE.has(issuer)) return DOMAIN_CACHE.get(issuer);
+    const res = await fetch(`${HORIZON}/accounts/${issuer}`);
+    if (!res.ok) throw new Error(`Issuer lookup failed: ${res.status}`);
+    const j = await res.json();
+    const dom = j.home_domain || "";
+    DOMAIN_CACHE.set(issuer, dom);
+    return dom;
   }
 
-  async function resolveIcon(code, issuer){
+  async function getToml(domain){
+    if (TOML_CACHE.has(domain)) return TOML_CACHE.get(domain);
+    if (!domain) return null;
+    try{
+      // SDK’s resolver uses a CORS-friendly path.
+      const toml = await SDK.StellarTomlResolver.resolve(domain, { allowHttp: false, timeout: 8000 });
+      TOML_CACHE.set(domain, toml || null);
+      return toml || null;
+    }catch(e){
+      TOML_CACHE.set(domain, null);
+      return null;
+    }
+  }
+
+  function findCurrencyImage(toml, code, issuer){
+    if (!toml || !Array.isArray(toml.CURRENCIES)) return null;
+    const hit = toml.CURRENCIES.find(c =>
+      (c.code === code) &&
+      (c.issuer === issuer || c.issuer?.toUpperCase() === issuer?.toUpperCase())
+    );
+    return hit?.image || hit?.logo || null;
+  }
+
+  async function resolveIconFromToml(code, issuer){
     const key = `${code}:${issuer||''}`;
     if (ICON_CACHE.has(key)) return ICON_CACHE.get(key);
 
-    // XLM -> inline SVG data URL
     if (code === 'XLM' && !issuer) {
-      const data = 'data:image/svg+xml;utf8,' + encodeURIComponent(XLM_SVG);
-      ICON_CACHE.set(key, data);
-      return data;
+      ICON_CACHE.set(key, XLM_SVG);
+      return XLM_SVG;
     }
 
-    // Try LOBSTR CDN (commonly used in Stellar ecosystem)
-    if (issuer) {
-      const u128 = `https://assets.lobstr.co/tokens/${code}-${issuer}-128x128.png`;
-      const u64  = `https://assets.lobstr.co/tokens/${code}-${issuer}-64x64.png`;
-      const hit = await tryLoad(u128) || await tryLoad(u64);
-      if (hit) { ICON_CACHE.set(key, hit); return hit; }
-    }
+    try{
+      const domain = await getHomeDomain(issuer);
+      const toml = await getToml(domain);
+      const url = findCurrencyImage(toml, code, issuer);
+      if (url) { ICON_CACHE.set(key, url); return url; }
+    }catch(_){ /* fall through */ }
 
-    const fallback = monogram(code || '???');
+    const fallback = monogram(code);
     ICON_CACHE.set(key, fallback);
     return fallback;
   }
@@ -148,8 +175,9 @@
   async function paintPill(iconEl, textEl, code, issuer){
     textEl.textContent = code;
     iconEl.innerHTML = '';
-    const url = await resolveIcon(code, issuer);
+    const url = await resolveIconFromToml(code, issuer);
     const img = document.createElement('img');
+    img.alt = `${code} logo`; img.referrerPolicy = 'no-referrer';
     img.src = url;
     iconEl.appendChild(img);
   }
@@ -158,19 +186,20 @@
     const sel = document.getElementById('from');
     const { code, issuer } = parseVal(sel.value);
     await paintPill(document.getElementById('fromIcon'), document.getElementById('fromTicker'), code, issuer);
+    document.getElementById('note').textContent = `Loaded icon for ${code}${issuer?` (${issuer.slice(0,4)}…${issuer.slice(-4)})`:''}`;
   }
 
   async function init(){
-    // Fixed "to" = AQUAm25
+    // Paint fixed "To" = AQUAm25 from TOML
     await paintPill(document.getElementById('toIcon'),  document.getElementById('toTicker'),  'AQUAm25', AQUAM25_ISSUER);
     await paintPill(document.getElementById('toIcon2'), document.getElementById('toTicker2'), 'AQUAm25', AQUAM25_ISSUER);
-    await refreshFrom();
 
+    await refreshFrom();
     document.getElementById('from').addEventListener('change', refreshFrom);
     document.getElementById('reload').addEventListener('click', ()=>{
-      ICON_CACHE.clear();
+      ICON_CACHE.clear(); DOMAIN_CACHE.clear(); TOML_CACHE.clear();
       refreshFrom();
-      document.getElementById('note').textContent = 'Icons reloaded (cache cleared).';
+      document.getElementById('note').textContent = 'Caches cleared. Reloaded.';
       setTimeout(()=>document.getElementById('note').textContent='',1200);
     });
   }
