--- a/pilltest/index.html
+++ b/pilltest/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>SEP-1 Icon Pills (TOML via Horizon) — Test</title>
+<title>SEP-1 Icon Pills (TOML via Horizon + Proxy Fallback)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <script src="https://cdn.jsdelivr.net/npm/@stellar/stellar-sdk@14.3.0/dist/stellar-sdk.min.js" crossorigin="anonymous"></script>
+<script type="module">
+  import * as TOML from "https://esm.sh/toml@3.0.0";
+
+  window.TOML_PARSE = TOML.parse;
+</script>
 <style>
-  :root{--bg:#0b0f12;--panel:#12181d;--ink:#e8f0f6;--muted:#8aa0ac;--border:#1c242c;--pill:#0f1620;}
+  :root{--bg:#0b0f12;--panel:#12181d;--ink:#e8f0f6;--muted:#8aa0ac;--border:#1c242c;--pill:#0f1620}
   *{box-sizing:border-box}
   html,body{margin:0;background:var(--bg);color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-  .wrap{max-width:720px;margin:28px auto;padding:0 16px}
+  .wrap{max-width:740px;margin:28px auto;padding:0 16px}
   .card{background:var(--panel);border:1px solid var(--border);border-radius:18px;padding:20px}
   h1{margin:0 0 14px;font-size:18px}
   label{display:block;margin:12px 0 6px;color:var(--muted);font-size:12px}
@@ -30,14 +35,13 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>Asset pills with icons from SEP-1 (stellar.toml)</h1>
+    <h1>Asset pills with issuer icons (stellar.toml)</h1>
 
     <div class="row">
       <div style="flex:1;min-width:260px">
         <label>From (Code:Issuer or XLM)</label>
         <select id="from">
           <option value="XLM">XLM (native)</option>
-          <!-- Common issuers for testing -->
           <option value="AQUA:GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAV7Y4M67AQUA">AQUA</option>
           <option value="AQUAm25:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">AQUAm25</option>
           <option value="USDC:GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN">USDC (centre.io)</option>
@@ -80,10 +84,10 @@
 
 <script>
   const SDK = window.StellarSdk;
+  const TOML_PARSE = window.TOML_PARSE;
   const HORIZON = "https://horizon.stellar.org";
   const AQUAM25_ISSUER = "GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC";
 
-  // Crisp inline XLM icon
   const XLM_SVG = 'data:image/svg+xml;utf8,' + encodeURIComponent(`
     <svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg">
       <circle cx="128" cy="128" r="128" fill="#1b2a42"/>
@@ -93,65 +97,86 @@
     </svg>
   `);
 
-  // Caches
-  const ICON_CACHE   = new Map();   // "CODE:ISSUER|null" -> url
+  const ICON_CACHE   = new Map();   // "CODE:ISSUER" -> url
   const DOMAIN_CACHE = new Map();   // issuer -> domain
-  const TOML_CACHE   = new Map();   // domain -> parsed object or null
+  const TOML_CACHE   = new Map();   // domain -> parsed or null
 
   function monogram(text) {
-    const c = document.createElement('canvas'); c.width = 64; c.height = 64;
-    const ctx = c.getContext('2d');
-    ctx.fillStyle = '#16212b'; ctx.beginPath(); ctx.arc(32,32,32,0,Math.PI*2); ctx.fill();
-    ctx.fillStyle = '#d8e6f2';
-    ctx.font = 'bold 28px ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial';
-    ctx.textAlign = 'center'; ctx.textBaseline = 'middle';
-    ctx.fillText((text||'?').slice(0,3).toUpperCase(), 32, 36);
+    const c = document.createElement('canvas'); c.width=64; c.height=64;
+    const x = c.getContext('2d');
+    x.fillStyle='#16212b'; x.beginPath(); x.arc(32,32,32,0,Math.PI*2); x.fill();
+    x.fillStyle='#d8e6f2'; x.font='bold 28px ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial';
+    x.textAlign='center'; x.textBaseline='middle';
+    x.fillText((text||'?').slice(0,3).toUpperCase(),32,36);
     return c.toDataURL('image/png');
   }
 
   async function getHomeDomain(issuer){
     if (DOMAIN_CACHE.has(issuer)) return DOMAIN_CACHE.get(issuer);
     const r = await fetch(`${HORIZON}/accounts/${issuer}`);
-    if (!r.ok) throw new Error(`Issuer lookup failed: ${r.status}`);
+    if(!r.ok) throw new Error(`Issuer lookup failed: ${r.status}`);
     const j = await r.json();
     const dom = j.home_domain || "";
     DOMAIN_CACHE.set(issuer, dom);
     return dom;
   }
 
-  async function getToml(domain){
-    if (!domain) return null;
-    if (TOML_CACHE.has(domain)) return TOML_CACHE.get(domain);
-    try {
-      const toml = await SDK.StellarTomlResolver.resolve(domain, { allowHttp:false, timeout:8000 });
-      TOML_CACHE.set(domain, toml || null);
-      return toml || null;
-    } catch (e) {
-      // Many domains still ship proper CORS; if not, we just cache null and fall back.
-      console.warn("stellar.toml fetch failed for", domain, e);
-      TOML_CACHE.set(domain, null);
-      return null;
+  // Primary: SDK resolver (when CORS is allowed)
+  async function resolveTomlSDK(domain){
+    try{
+      const t = await SDK.StellarTomlResolver.resolve(domain, { allowHttp:false, timeout:8000 });
+      return { toml:t||null, via:'sdk' };
+    }catch(e){
+      return { toml:null, via:'sdk-fail' };
     }
   }
 
+  // Fallback: proxy fetch + parse
+  async function resolveTomlProxy(domain){
+    const urls = [
+      `https://r.jina.ai/https://${domain}/.well-known/stellar.toml`,
+      `https://r.jina.ai/http://${domain}/.well-known/stellar.toml`
+    ];
+    for (const u of urls){
+      try{
+        const r = await fetch(u, { mode:'cors' });
+        if(!r.ok) continue;
+        const txt = await r.text();
+        if(!txt || txt.length<10) continue;
+        const parsed = TOML_PARSE(txt);
+        return { toml:parsed||null, via:'proxy' };
+      }catch(_){}
+    }
+    return { toml:null, via:'proxy-fail' };
+  }
+
+  async function getToml(domain){
+    if (!domain) return { toml:null, via:'no-domain' };
+    if (TOML_CACHE.has(domain)) return TOML_CACHE.get(domain);
+
+    let out = await resolveTomlSDK(domain);
+    if(!out.toml){
+      const fallback = await resolveTomlProxy(domain);
+      out = fallback.toml ? fallback : out;
+    }
+    TOML_CACHE.set(domain, out);
+    return out;
+  }
+
   function toAbsoluteUrl(domain, url){
-    if (!url) return null;
-    // Already absolute
-    if (/^https?:\/\//i.test(url)) return url;
-    // Protocol-relative
-    if (/^\/\//.test(url)) return `https:${url}`;
-    // Root-relative
-    if (url.startsWith('/')) return `https://${domain}${url}`;
-    // Plain relative path
+    if(!url) return null;
+    if(/^https?:\/\//i.test(url)) return url;
+    if(/^\/\//.test(url)) return `https:${url}`;
+    if(url.startsWith('/')) return `https://${domain}${url}`;
     return `https://${domain}/${url}`;
   }
 
   function findCurrencyImage(toml, code, issuer, domain){
-    if (!toml || !Array.isArray(toml.CURRENCIES)) return null;
-    const hit = toml.CURRENCIES.find(c => {
-      const ccode   = c.code || c.CODE;
-      const cissuer = (c.issuer || c.ISSUER || "").toUpperCase();
-      return ccode === code && cissuer === (issuer||"").toUpperCase();
+    if(!toml || !Array.isArray(toml.CURRENCIES)) return null;
+    const hit = toml.CURRENCIES.find(c=>{
+      const ccode=(c.code||c.CODE);
+      const ciss =(c.issuer||c.ISSUER||'').toUpperCase();
+      return ccode===code && ciss===(issuer||'').toUpperCase();
     });
     const raw = hit?.image || hit?.logo || hit?.IMAGE || hit?.LOGO || null;
     return toAbsoluteUrl(domain, raw);
@@ -159,32 +184,31 @@
 
   async function resolveIconFromToml(code, issuer){
     const key = `${code}:${issuer||''}`;
-    if (ICON_CACHE.has(key)) return ICON_CACHE.get(key);
-
-    if (code === 'XLM' && !issuer) {
-      ICON_CACHE.set(key, XLM_SVG); return XLM_SVG;
-    }
+    if(ICON_CACHE.has(key)) return ICON_CACHE.get(key);
+    if(code==='XLM' && !issuer){ ICON_CACHE.set(key, XLM_SVG); return XLM_SVG; }
 
     try{
       const domain = await getHomeDomain(issuer);
-      const toml   = await getToml(domain);
-      const url    = findCurrencyImage(toml, code, issuer, domain);
-      if (url) { ICON_CACHE.set(key, url); return url; }
-    }catch(_){ /* fall through */ }
+      const { toml, via } = await getToml(domain);
+      note(`Issuer domain: ${domain||'—'} · TOML: ${toml?'OK':'unavailable'} (${via})`);
+      const url = findCurrencyImage(toml, code, issuer, domain);
+      if(url){ ICON_CACHE.set(key, url); return url; }
+    }catch(_){ /* ignore, use fallback */ }
 
-    const fallback = monogram(code);
-    ICON_CACHE.set(key, fallback);
-    return fallback;
+    const fb = monogram(code);
+    ICON_CACHE.set(key, fb);
+    return fb;
   }
 
-  function parseVal(v){ if (!v || v==='XLM') return { code:'XLM', issuer:null }; const [code, issuer]=v.split(':'); return { code, issuer }; }
+  function parseVal(v){ if(!v || v==='XLM') return {code:'XLM',issuer:null}; const [code,issuer]=v.split(':'); return {code,issuer}; }
+  function note(t){ document.getElementById('note').textContent = t; }
 
   async function paintPill(iconEl, textEl, code, issuer){
     textEl.textContent = code;
     iconEl.innerHTML = '';
     const url = await resolveIconFromToml(code, issuer);
     const img = document.createElement('img');
-    img.alt = `${code} logo`; img.referrerPolicy = 'no-referrer'; img.decoding = 'async';
+    img.alt = `${code} logo`; img.referrerPolicy='no-referrer'; img.decoding='async';
     img.src = url;
     iconEl.appendChild(img);
   }
@@ -192,34 +216,18 @@
   async function refreshFrom(){
     const sel = document.getElementById('from');
     const { code, issuer } = parseVal(sel.value);
-    // Show debug note with domain and whether TOML was found
-    let note = '';
-    if (issuer) {
-      try {
-        const domain = await getHomeDomain(issuer);
-        const toml = await getToml(domain);
-        note = `Issuer domain: ${domain || '—'} · TOML: ${toml ? 'OK' : 'unavailable'}`;
-      } catch {
-        note = 'Issuer domain lookup failed';
-      }
-    } else {
-      note = 'Native XLM';
-    }
-    document.getElementById('note').textContent = note;
-
+    if(!issuer) note('Native XLM');
     await paintPill(document.getElementById('fromIcon'), document.getElementById('fromTicker'), code, issuer);
   }
 
   async function init(){
     await paintPill(document.getElementById('toIcon'),  document.getElementById('toTicker'),  'AQUAm25', AQUAM25_ISSUER);
     await paintPill(document.getElementById('toIcon2'), document.getElementById('toTicker2'), 'AQUAm25', AQUAM25_ISSUER);
-
     await refreshFrom();
     document.getElementById('from').addEventListener('change', refreshFrom);
     document.getElementById('reload').addEventListener('click', ()=>{
       ICON_CACHE.clear(); DOMAIN_CACHE.clear(); TOML_CACHE.clear();
-      document.getElementById('note').textContent = 'Caches cleared.';
-      refreshFrom();
+      note('Caches cleared.'); refreshFrom();
     });
   }
   init();
